@@ -1,21 +1,19 @@
 package ru.skogmark.aggregator.core;
 
-import javax.annotation.Nullable;
+import javax.annotation.Nonnull;
 import java.time.LocalTime;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
-import static java.util.Objects.nonNull;
+import static java.util.Objects.requireNonNull;
 
 public class Timetable {
     private final Set<LocalTime> times;
 
-    private Timetable(@Nullable Set<LocalTime> times) {
-        this.times = nonNull(times) ? Collections.unmodifiableSet(new HashSet<>(times)) : Collections.emptySet();
+    private Timetable(@Nonnull Set<LocalTime> times) {
+        this.times = Set.copyOf(requireNonNull(times, "times"));
     }
 
-    public static Timetable of(@Nullable Set<LocalTime> times) {
+    public static Timetable of(@Nonnull Set<LocalTime> times) {
         return new Timetable(times);
     }
 
